--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-server.port=8090
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=postgres
-spring.datasource.password=hana123
-
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 
