--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/AlumniDb
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=create
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+logging.level.org.hibernate.SQL=DEBUG
 
