--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "angular-datatables": "^16.0.0",
+    "bootstrap": "^5.3.0",
     "datatables.net": "^1.13.5",
     "datatables.net-dt": "^1.13.5",
     "jquery": "^3.7.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.18",
     "tslib": "^2.3.0",
