a part of confirmation email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=alumniproject4@gmail.com
 spring.mail.password=AlumniTest1
+spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+logging.level.org.springframework.mail=DEBUG
