--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,15 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.0",
+    "@syncfusion/ej2-angular-calendars": "^22.1.38",
     "angular-datatables": "^16.0.0",
     "bootstrap": "^5.3.0",
     "datatables.net": "^1.13.5",
     "datatables.net-dt": "^1.13.5",
     "jquery": "^3.7.0",
+    "ng2-date-picker": "^16.0.0",
+    "ng2-datepicker": "^12.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.18",
