Sending emails to the registered users

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
+		<!-- to create email templates using Thymeleaf server-side Java template engine -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 
 		<!-- Adding Swager Dep.
 		<dependency>
