--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,8 +9,14 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=alumniproject4@gmail.com
-spring.mail.password=AlumniTest1
-spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.password=tsegexhcarqyjwmd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.transport.protocol=smtp
 logging.level.org.springframework.mail=DEBUG
+
+# Thymeleaf Configuration
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
