--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,21 +11,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.1.5",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.1.5",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "angular-datatables": "^16.0.0",
     "bootstrap": "^5.3.0",
+    "bulma": "^0.9.4",
     "datatables.net": "^1.13.5",
     "datatables.net-dt": "^1.13.5",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.18",
+    "tippy.js": "^6.3.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
