--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 #spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
