--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "angular-datatables": "^16.0.0",
     "bootstrap": "^5.3.0",
     "bulma": "^0.9.4",
+    "cors": "^2.8.5",
     "datatables.net": "^1.13.5",
     "datatables.net-dt": "^1.13.5",
     "jquery": "^3.7.0",
