--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+jwt.secret: '[a-zA-Z0-9._]^+$Guidelines89797987forAlphabeticalArraNumeralsandOtherSymbo$'
 spring.datasource.url=jdbc:postgresql://localhost:5432/AlumniDb
 spring.datasource.username=postgres
 spring.datasource.password=1234
@@ -6,4 +7,15 @@ spring.jpa.hibernate.ddl-auto=update
 #logging.level.org.hibernate.SQL=DEBUG
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.main.allow-bean-definition-overriding=true
+
+
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.web.resources.add-mappings=false
+server.error.path=/error
+
+
+
+
+
 
