--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,14 +20,17 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "@syncfusion/ej2-angular-calendars": "^22.1.38",
     "angular-datatables": "^16.0.0",
+    "angular-notifier": "^14.0.0",
     "bootstrap": "^5.3.0",
     "bulma": "^0.9.4",
     "cors": "^2.8.5",
     "datatables.net": "^1.13.5",
     "datatables.net-dt": "^1.13.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.7.0",
     "ng2-date-picker": "^16.0.0",
     "ng2-datepicker": "^12.0.0",
