--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
+    "@popperjs/core": "^2.11.8",
     "@syncfusion/ej2-angular-calendars": "^22.1.38",
     "angular-datatables": "^16.0.0",
     "angular-notifier": "^14.0.0",
