--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "richtext": "^0.0.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.18",
+    "swiper": "^10.2.0",
     "tippy.js": "^6.3.7",
     "trusted-types": "^2.0.0",
     "tslib": "^2.3.0",
@@ -62,6 +63,7 @@
     "@angular-devkit/build-angular": "^16.1.8",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/bootstrap": "^5.2.6",
     "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
