--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -50,6 +50,17 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>28.1-jre</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
 		<!-- to create email templates using Thymeleaf server-side Java template engine -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
