--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,17 +31,21 @@
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "@popperjs/core": "^2.11.8",
+    "@stomp/stompjs": "^7.0.0",
     "@syncfusion/ej2-angular-calendars": "^22.1.38",
     "angular-datatables": "^16.0.0",
     "angular-notifier": "^14.0.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "bulma": "^0.9.4",
     "ckeditor5": "^39.0.0",
     "ckeditor5-build-classic": "^1.0.0",
     "cors": "^2.8.5",
     "datatables.net": "^1.13.5",
     "datatables.net-dt": "^1.13.5",
+    "date-fns": "^2.30.0",
     "font-awesome": "^4.7.0",
+    "globalthis": "^1.0.3",
     "jquery": "^3.7.0",
     "marked": "^7.0.1",
     "ng2-date-picker": "^16.0.0",
@@ -52,6 +56,8 @@
     "quill": "^1.3.7",
     "richtext": "^0.0.4",
     "rxjs": "~7.8.0",
+    "rxjs-websockets": "^9.0.0",
+    "sockjs-client": "^1.6.1",
     "sweetalert2": "^11.7.18",
     "swiper": "^10.2.0",
     "tippy.js": "^6.3.7",
@@ -67,6 +73,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
     "@types/quill": "^2.0.10",
+    "@types/sockjs-client": "^1.5.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
