--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     "@angular-devkit/build-angular": "^16.1.8",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.2.1",
+    "@angular/localize": "^16.2.1",
     "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
