--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,6 +74,7 @@
     "@types/jquery": "^3.5.16",
     "@types/quill": "^2.0.10",
     "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
