--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,35 +21,52 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@ckeditor/ckeditor5-angular": "^7.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^39.0.0",
+    "@ckeditor/ckeditor5-core": "^39.0.0",
+    "@ckeditor/ckeditor5-engine": "^39.0.0",
+    "@ckeditor/ckeditor5-utils": "^39.0.0",
+    "@ckeditor/ckeditor5-watchdog": "^39.0.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "@popperjs/core": "^2.11.8",
     "@syncfusion/ej2-angular-calendars": "^22.1.38",
+    "@tinymce/tinymce-angular": "^7.0.0",
     "angular-datatables": "^16.0.0",
     "angular-notifier": "^14.0.0",
     "bootstrap": "^5.3.0",
     "bulma": "^0.9.4",
+    "ckeditor5": "^39.0.0",
+    "ckeditor5-build-classic": "^1.0.0",
     "cors": "^2.8.5",
     "datatables.net": "^1.13.5",
     "datatables.net-dt": "^1.13.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.7.0",
+    "marked": "^7.0.1",
     "ng2-date-picker": "^16.0.0",
     "ng2-datepicker": "^12.0.0",
+    "ngx-editor": "^16.0.0-beta.0",
+    "ngx-quill": "^22.0.0",
     "popper.js": "^1.16.1",
+    "quill": "^1.3.7",
+    "richtext": "^0.0.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.18",
     "tippy.js": "^6.3.7",
+    "trusted-types": "^2.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.0",
+    "@angular-devkit/build-angular": "^16.1.8",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
+    "@types/quill": "^2.0.10",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
